--- a/index.html
+++ b/index.html
@@ -48,18 +48,19 @@
 
 <p class="contenido">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
 
-<div class="btn btn-primary">Ir a Tienda</div>
+<div class="btn btn-light">Ir a Tienda</div>
 </div>
 
-  <footer class="footer "><p class="newsletter">Newsletter</p>
-  <div class="correo">Correo Electrónico
-      <div class="d-flex justify-content-between">
-    <div class="container">
+  <footer class="footer d-flex">
+
+    <div class="newsletter">Newsletter
+  <p class="correo">Correo Electrónico</p>
+    <form class="d-flex">
       <input class="form-control me-2" type="search" placeholder="Ingresa tu correo electrónico" aria-label="Search">
-    <button class="btn btn-outline-success" type="submit">Search</button>
+      
+      </form>
   </div>
-    <div class="suscribir">Suscribir</div>
-  </div>
+  <div class="suscribir">Suscribir</div>
 
 
   </footer>
