--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <body>
   <section class="main">
     <div class="header">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">XDA
+        <a class="logo-navbar" href="#" >XDA
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -57,7 +57,7 @@
   <p class="correo">Correo Electrónico</p>
     <form class="d-flex">
       <input class="form-control me-2" type="search" placeholder="Ingresa tu correo electrónico" aria-label="Search">
-      
+
       </form>
   </div>
   <div class="suscribir">Suscribir</div>
